welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var x:Int=0
^Poucet:7: error: '(' expected but '{' found.
while{sortieTrouvee}
     ^Poucet:10: error: illegal start of simple expression
	}
        ^Poucet:11: error: 'while' expected but '}' found.
}
^